--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         <div class="container">
             <h2 class="section-title">Certifications & <span class="accent">Achievements</span></h2>
             <div class="cert-grid">
-                <div class="cert-card clickable-cert" data-cert-image="certificates/innovative-award.jpg" data-cert-title="Most Innovative Solution Award Certificate">
+                <div class="cert-card clickable-cert" data-cert-image="innovative-award.jpg" data-cert-title="Most Innovative Solution Award Certificate">
                     <div class="cert-icon">🌟</div>
                     <h3 class="cert-title">Most Innovative Solution Award</h3>
                     <p class="cert-issuer">STI College Alabang</p>
@@ -241,7 +241,7 @@
                     <p class="cert-date">2025</p>
                 </div>
 
-                <div class="cert-card clickable-cert" data-cert-image="certificates/udemy-software-testing.jpg" data-cert-title="Learn Software Testing: Beginner to Expert - Udemy Certificate">
+                <div class="cert-card clickable-cert" data-cert-image="udemy-software-testing.jpg" data-cert-title="Learn Software Testing: Beginner to Expert - Udemy Certificate">
                     <div class="cert-icon">📚</div>
                     <h3 class="cert-title">Learn Software Testing: Beginner to Expert</h3>
                     <p class="cert-issuer">Udemy - 35 Hours</p>
@@ -263,7 +263,7 @@
                     <p class="cert-date">2025</p>
                 </div>
 
-                <div class="cert-card clickable-cert" data-cert-image="certificates/sap-systems-integration.jpg" data-cert-title="SAP Business One - Systems Integration Certificate">
+                <div class="cert-card clickable-cert" data-cert-image="sap-systems-integration.jpg" data-cert-title="SAP Business One - Systems Integration Certificate">
                     <div class="cert-icon">💼</div>
                     <h3 class="cert-title">SAP Business One - Systems Integration & Architecture</h3>
                     <p class="cert-issuer">STI College Alabang</p>
@@ -271,7 +271,7 @@
                     <span class="view-cert-badge">View Certificate</span>
                 </div>
 
-                <div class="cert-card clickable-cert" data-cert-image="certificates/sap-advance.jpg" data-cert-title="SAP Business One - SAP Advance Certificate">
+                <div class="cert-card clickable-cert" data-cert-image="sap-advance.jpg" data-cert-title="SAP Business One - SAP Advance Certificate">
                     <div class="cert-icon">⚙️</div>
                     <h3 class="cert-title">SAP Business One - SAP Advance</h3>
                     <p class="cert-issuer">STI College Alabang</p>
