--- a/index.html
+++ b/index.html
@@ -181,16 +181,22 @@
             <h2 class="section-title">Current <span class="accent">Projects</span></h2>
             <p class="projects-intro">Building real-world projects to showcase my skills. Check back soon for updates!</p>
             <div class="projects-grid">
-                <div class="project-card coming-soon">
+                
+                <!-- Test Case Management Tool - LIVE PROJECT -->
+                <div class="project-card">
                     <div class="project-icon">🚀</div>
                     <h3 class="project-title">Test Case Management Tool</h3>
-                    <p class="project-description">A web-based application for creating, managing, and tracking test cases with real-time collaboration features.</p>
+                    <p class="project-description">A web-based application for creating, managing, and tracking test cases with real-time statistics and filtering capabilities.</p>
                     <div class="project-tags">
-                        <span class="tag">Python</span>
                         <span class="tag">JavaScript</span>
-                        <span class="tag">MySQL</span>
+                        <span class="tag">HTML/CSS</span>
+                        <span class="tag">LocalStorage</span>
                     </div>
-                    <div class="project-status">Coming Soon</div>
+                    <div class="project-links">
+                        <a href="projects/test-case-tool/index.html" target="_blank" class="project-btn btn-primary">
+                            <span>🔗</span> View Project
+                        </a>
+                    </div>
                 </div>
 
                 <div class="project-card coming-soon">
