--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                         <span class="tag">LocalStorage</span>
                     </div>
                     <div class="project-links">
-                        <a href="projects/test-case-tool/index.html" target="_blank" class="project-btn btn-primary">
+                        <a href="./projects/index.html" target="_blank" class="project-btn btn-primary">
                             <span>🔗</span> View Project
                         </a>
                     </div>
