--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Test Case Management Tool | Ahrif Cruz</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     
@@ -230,6 +230,6 @@
         <p>Test Case Management Tool © 2025 | Built by <strong>Ahrif Hajjie Cruz</strong></p>
     </footer>
 
-    <script src="app.js"></script>
+    <script src="./app.js" defer></script>
 </body>
 </html>
