--- a/index.html
+++ b/index.html
@@ -211,16 +211,19 @@
                     <div class="project-status">Coming Soon</div>
                 </div>
 
-                <div class="project-card coming-soon">
+                <div class="project-card">
                     <div class="project-icon">🐛</div>
                     <h3 class="project-title">Bug Tracker Application</h3>
-                    <p class="project-description">A full-stack bug tracking system with user authentication, priority management, and status updates.</p>
+                    <p class="project-description">A comprehensive bug tracking system with priority management, status tracking, and detailed bug reporting capabilities.</p>
                     <div class="project-tags">
                         <span class="tag">JavaScript</span>
-                        <span class="tag">SQL</span>
+                        <span class="tag">LocalStorage</span>
                         <span class="tag">HTML/CSS</span>
                     </div>
-                    <div class="project-status">Coming Soon</div>
+                    <div class="project-links">
+                        <a href="./projects/bug-tracker/index.html" target="_blank" class="project-btn btn-primary">
+                         <span>🔗</span> View Project
+                        </a>
                 </div>
             </div>
         </div>
